fixed the gap

--- a/css/style.css
+++ b/css/style.css
@@ -15918,7 +15918,7 @@ html {
 
 .blog-area ol,
 .blog-area ul {
-  padding-left: 20px;
+  padding-left: 0px;
 }
 .blog-area ol li,
 .blog-area ul li {
