--- a/sass/components/post-card/_post-card.scss
+++ b/sass/components/post-card/_post-card.scss
@@ -20,7 +20,7 @@
 .blog-area {
   ol,
   ul {
-    padding-left: 20px;
+    padding-left: 0px;
 
     li {
       padding-top: 7px;
